--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <title>WebXR RTI Dome (v11 Geodesic Option)</title>
+    <title>WebXR RTI Dome (v12 Geodesic Final)</title>
     <style>
         body { 
             margin: 0; 
@@ -187,7 +187,7 @@
             <label for="domeType">돔 타입:</label>
             <select id="domeType">
                 <option value="free">자유 배치</option>
-                <option value="geodesic">3v 지오데식 (수정됨)</option>
+                <option value="geodesic">3v 지오데식 (상/하단 제외)</option>
             </select>
         </div>
         <div class="input-group">
@@ -220,7 +220,7 @@
             <label for="modalDomeType">돔 타입:</label>
             <select id="modalDomeType">
                 <option value="free">자유 배치</option>
-                <option value="geodesic">3v 지오데식 (수정됨)</option>
+                <option value="geodesic">3v 지오데식 (상/하단 제외)</option>
             </select>
         </div>
         <div class="input-group">
