--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                 자세한 내용은 marker-guide.md 파일을 참고하세요.
                 아래는 기본 히로(hiro) 마커 예시입니다.
             -->
-            <a-marker type="pattern" url="marker.patt">
+            <a-marker type="pattern" url="https://raw.githubusercontent.com/h9304/rti-dome/refs/heads/main/marker.patt">
                 <!-- 돔, 조명, 타겟이 이 안에 생성됩니다. -->
                 <a-entity id="dome-container" rti-dome-manager></a-entity>
             </a-marker>
